@@ -48,10 +48,8 @@ def test_normalize_by_median_loadgraph_with_args():
 
 
 def test_normalize_by_median_empty_file():
-    infile = utils.get_temp_filename('empty')
-    shutil.copyfile(utils.get_test_data('empty-file'), infile)
+    infile, in_dir = utils.get_temp_data('empty-file', 'empty')
     script = 'normalize-by-median.py'
-    in_dir = os.path.dirname(infile)
 
     args = [infile]
     (status, out, err) = utils.runscript(script, args, in_dir)
